--- a/index.html
+++ b/index.html
@@ -889,6 +889,7 @@
                 text-decoration-color: #011f2f; 
                 border-style: solid;
                 font-size: 12px; 
+                padding-top: 2px; 
             }
 
             button{
@@ -1774,6 +1775,7 @@
                 text-decoration-color: #011f2f; 
                 border-style: solid;
                 font-size: 16px; 
+                padding-top: 2.5px; 
             }
 
             button{
@@ -2751,6 +2753,7 @@
                 text-decoration-color: #011f2f; 
                 border-style: solid;
                 font-size: 20px; 
+                padding-top:3px; 
             }
 
             button{
@@ -3006,7 +3009,8 @@
   <input name="Email" type="email" placeholder="Email" required style = "background-color: #adeaff; text-decoration: #003652;"> 
   <input name="Name" type="text" placeholder="Name" required style = "background-color: #adeaff; text-decoration: #003652;">
   <br>
-  <input name="Subject" type="text" placeholder="Subject" required style = "background-color: #adeaff; text-decoration: #003652; height:10vh; display:inline;">
+  <br> 
+  <input name="Subject" type="text" placeholder="Subject" required style = "background-color: #adeaff; text-decoration: #003652; height:10vh; flex-direction: column; align-self: left;">
   <br> 
   <button type="submit" style =" background-color: #FFB703;">Send</button>
 </form>
