--- a/index.html
+++ b/index.html
@@ -3010,7 +3010,7 @@
   <input name="Name" type="text" placeholder="Name" required style = "background-color: #adeaff; text-decoration: #003652;">
   <br>
   <br> 
-  <input name="Subject" type="text" placeholder="Subject" required style = "background-color: #adeaff; text-decoration: #003652; height:10vh; flex-direction: column; align-self: left;">
+  <input name="Subject" type="text" placeholder="Subject" required style = "background-color: #adeaff; text-decoration: #003652; height:10vh; flex-direction: column; align-self: left; width: auto;">
   <br> 
   <button type="submit" style =" background-color: #FFB703;">Send</button>
 </form>
