--- a/index.html
+++ b/index.html
@@ -2754,6 +2754,7 @@
                 border-style: solid;
                 font-size: 20px; 
                 padding-top:3px; 
+                color: #011f2f;
             }
 
             button{
@@ -2764,6 +2765,7 @@
                 border-width:0.5em;
             }
         }
+        
     </style>
 </head>
 
