--- a/index.html
+++ b/index.html
@@ -3012,7 +3012,7 @@
   <input name="Name" type="text" placeholder="Name" required style = "background-color: #adeaff; text-decoration: #003652;">
   <br>
   <br> 
-  <input name="Subject" type="text" placeholder="Subject" required style = "background-color: #adeaff; text-decoration: #003652; height:10vh; flex-direction: column; align-items: left; width: auto; word-wrap: break-word;">
+  <input name="Subject" type="text" placeholder="Subject" required style = "background-color: #adeaff; text-decoration: #003652; height:10vh; flex-direction: column; align-items: left; width: auto; overflow-wrap: break-word;">
   <br> 
   <button type="submit" style =" background-color: #FFB703;">Send</button>
 </form>
