--- a/index.html
+++ b/index.html
@@ -3366,16 +3366,16 @@
             <iframe style="color:rgb(197, 105, 1);" src="https://www.wevideo.com/view/3252017933"
                 style="margin: auto; margin-top: 2vh;"> </iframe>
             <div style="height: 10%">
-                <p class="project-text">
+                <p class="project-text" style = "color: #FB8500; text-align: left;">
                     SKILLS:
                 </p>
-                <p class="skill-text"> PyTorch, Kaggle,
-                    Cloud-instance, Google Search API</p>
+                <p class="skill-text" style = "text-align: left;"> PyTorch, Kaggle,
+                    Cloud-instance, Google Search API </p>
             </div>
 
             <a href="#Chatbot">
-                <h3>
-                    Click for More Information </h3>
+                <roles>
+                    Click for More Information </roles>
             </a>
         <div id="Chatbot" class="modal">
             <div class="content">
