--- a/index.html
+++ b/index.html
@@ -2795,7 +2795,7 @@
                 box-shadow: 0 0 3em #177c96;
             }
 
-            p .project-text {
+             .project-text {
                 font-size: 1em;
                 color: #FB8500;
                 text-align: left;
@@ -2807,7 +2807,7 @@
                 font-family: 'Roboto Condensed', sans-serif;
             }
 
-            p .skill-text {
+            .skill-text {
                 font-size: 1.5em;
                 color: #FFB703;
                 text-align: left;
@@ -2824,7 +2824,7 @@
                 margin-top: 40vh;
             }
 
-            p .project_desc {
+             .project_desc {
                 font-size: 1em;
             }
 
