--- a/index.html
+++ b/index.html
@@ -3365,7 +3365,7 @@
             <h3 style="color: #dcf4fc; margin: auto;">Chatbot for Mental Health Awareness</h3>
             <iframe style="color:rgb(197, 105, 1);" src="https://www.wevideo.com/view/3252017933"
                 style="margin: auto; margin-top: 2vh;"> </iframe>
-            <div style="height: 10%">
+            <div>
                 <p class="project-text" style = "color: #FB8500; text-align: left;">
                     SKILLS:
                 </p>
@@ -3445,7 +3445,7 @@
                 <img src="aihandwritingmodel.png">
             </div>
             <br>
-            <div style="height: 10%;">
+            <div>
                 <p class="project-text" style = "color: #FB8500; text-align: left;"> SKILLS:
                 <p class="skill-text" style = "text-align: left;"> OpenCV, PyTorch, HTML/CSS/JS </p>
                 </p>
