--- a/index.html
+++ b/index.html
@@ -3367,12 +3367,10 @@
                 style="margin: auto; margin-top: 2vh;"> </iframe>
             <div>
                 <p class="project-text" style = "color: #FB8500; text-align: left;">
-                    SKILLS:
-                </p>
+                    SKILLS: </p>
                 <p class="skill-text" style = "text-align: left;"> PyTorch, Kaggle,
                     Cloud-instance, Google Search API </p>
             </div>
-
             <a href="#Chatbot">
                 <roles>
                     Click for More Information </roles>
@@ -3395,6 +3393,7 @@
             </div>
             </div>
             </div>
+            
         <div class="project-box">
             <h3 class = "project-title" style ="color: #dcf4fc; margin: auto;"> BioKnee 1.0 </h3>
 
