--- a/index.html
+++ b/index.html
@@ -1823,7 +1823,7 @@
                 box-shadow: 0 0 3em #177c96;
             }
 
-            p .project-text {
+            .project-text {
                 font-size: 1.5em;
                 color: #FB8500;
                 text-align: left;
@@ -1836,7 +1836,7 @@
                 font-family: 'Roboto Condensed', sans-serif;
             }
 
-           p .skill-text {
+            .skill-text {
                 font-size: 1.5em;
                 color: #FFB703;
                 text-align: left;
