--- a/index.html
+++ b/index.html
@@ -3402,7 +3402,7 @@
                 <p class="skill-text" style = "text-align: left;"> Electrical Circuits,
                     Python, Programming </p>
             </div>
-                <roles><a href="#Chatbot"> Click for More Information </a></roles>
+                <roles><a href="#Knee"> Click for More Information </a></roles>
         <div id="Chatbot" class="modal">
             <div class="content">
                 <h2 style="text-align: center;">
@@ -3429,11 +3429,11 @@
                 </p>
                 <p class="skill-text" style = "text-align: left;"> HTML/CSS, Open AI, Web-Development </p>
             </div>
-                <roles><a href="#Chatbot"> Click for More Information </a></roles>
+                <roles><a href="#Politics"> Click for More Information </a></roles>
         <div id="Chatbot" class="modal">
             <div class="content">
                 <h2 style="text-align: center;">
-                    A mechanical knee rehabilation technology to help with ACL injury recoveries...
+                    A web application to raise political participation amongst college students...
                 </h2>
                 <br>
                 <p class = "project-title" class="project-desc"> Web application for local elections awareness with a conversational agent answering questions and guiding users to polling stations, offering details on ongoing elections, and providing access to candidate websites. </p>
@@ -3444,6 +3444,7 @@
                 </a>
             </div>
             </div>
+        </div>
         </div>
 <br> 
     <div class="flex-container proj-box-cont add_margin">
