testing project boxes with new features

--- a/index.html
+++ b/index.html
@@ -3499,7 +3499,7 @@
             <div id="Game" class="modal">
                 <div class="content">
                     <h2 style="text-align: center;">
-                        A web application to translate handwriting into legible text...
+                        An object-oriented-programming-based user engaging video game...
                     </h2>
                     <br>
                     <div>
@@ -3529,7 +3529,7 @@
             <div id="Portfolio" class="modal">
                 <div class="content">
                     <h2 style="text-align: center;">
-                        A web application to translate handwriting into legible text...
+                        A personal website designed and created from scratch...
                     </h2>
                     <br>
                     <div>
