fixed learn more fonts

--- a/index.html
+++ b/index.html
@@ -856,6 +856,14 @@
                 padding-bottom: 0.625em;
             }
 
+            .learn-more {
+                color: #023047;
+                font-size: 0.25em;
+                text-align: left;
+                padding-left: 0.625em;
+                padding-bottom: 0.625em;
+            }
+
             p .project_desc {
                 font-size: 1em;
             }
@@ -1921,6 +1929,14 @@
             }
 
             .copy-right-text {
+                color: #023047;
+                font-size: 0.5em;
+                text-align: left;
+                padding-left: 0.625em;
+                padding-bottom: 0.625em;
+            }
+
+            .learn-more {
                 color: #023047;
                 font-size: 0.5em;
                 text-align: left;
@@ -3297,6 +3313,13 @@
                 text-decoration: none;
                 font-size: 30px;
             }
+
+            .learn-more{
+                text-align: center;
+                font-size: 1em;
+                padding: 2em;
+                color: rgb(194, 103, 0);
+            }
         }
     </style>
 </head>
@@ -3394,7 +3417,7 @@
                         responses
                         to mental health questions and respective links to resources. </p>
                     <br>
-                    <a href="#" class="popbox-close">
+                    <a href="#Projects" class="popbox-close">
                         X
                     </a>
                 </div>
@@ -3422,7 +3445,7 @@
                         technology in order to help with knee rehabilitation, especially with ACL tears. </p>
                     </p>
                     <br>
-                    <a href="#" class="popbox-close">
+                    <a href="#Projects" class="popbox-close">
                         X
                     </a>
                 </div>
@@ -3450,7 +3473,7 @@
                         on ongoing elections, and providing access to candidate websites. </p>
                     </p>
                     <br>
-                    <a href="#" class="popbox-close">
+                    <a href="#Projects" class="popbox-close">
                         X
                     </a>
                 </div>
@@ -3481,7 +3504,7 @@
                     file.
                     </p>
                     <br>
-                    <a href="#" class="popbox-close">
+                    <a href="#Projects" class="popbox-close">
                         X
                     </a>
                 </div>
@@ -3508,7 +3531,7 @@
                     object-oriented programming and inheritance. </p>
                     </div>
                     <br>
-                    <a href="#" class="popbox-close">
+                    <a href="#Projects" class="popbox-close">
                         X
                     </a>
                 </div>
@@ -3537,7 +3560,7 @@
                     bio, education, projects, honors, and contact information. </p>
                     </div>
                     <br>
-                    <a href="#" class="popbox-close">
+                    <a href="#Projects" class="popbox-close">
                         X
                     </a>
                 </div>
