--- a/index.html
+++ b/index.html
@@ -1937,10 +1937,13 @@
             }
 
             .learn-more {
-                color: #023047;
-                font-size: 0.5em;
-                text-align: left;
-                padding-left: 0.625em;
+                font-family: 'Dosis', sans-serif;
+                font-family: 'Poppins', sans-serif;
+                font-family: 'Raleway', sans-serif;
+                font-family: 'Roboto Condensed', sans-serif;
+                color: #FB8500;
+                font-size: 1em;
+                text-align: center;
                 padding-bottom: 0.625em;
             }
 
@@ -3548,7 +3551,7 @@
                 </p>
                 <p class=" skill-text" style="text-align: left;"> HTML, CSS, JavaScript </p>
             </div>
-            <roles><a href="#Portfolio"> Click for More Information </a></roles>
+            <div class = roles><a href="#Portfolio"> Click for More Information </a></div>
             <div id="Portfolio" class="modal">
                 <div class="content">
                     <h2 style="text-align: center;">
