testing new change

--- a/index.html
+++ b/index.html
@@ -3323,6 +3323,7 @@
                 padding: 2em;
                 color: rgb(194, 103, 0);
             }
+
         }
     </style>
 </head>
@@ -3462,7 +3463,7 @@
                 <p class="project-text" style="color: #FB8500; text-align: left;">
                     SKILLS:
                 </p>
-                <p class="skill-text" style="text-align: left;"> HTML/CSS, Open AI, Web-Development </p>
+                <p class="skill-text link-orange" style="text-align: left;"> HTML/CSS, Open AI, Web-Development </p>
             </div>
             <roles><a href="#Politics"> Click for More Information </a></roles>
             <div id="Politics" class="modal">
@@ -3551,7 +3552,7 @@
                 </p>
                 <p class=" skill-text" style="text-align: left;"> HTML, CSS, JavaScript </p>
             </div>
-            <div class = roles><a href="#Portfolio"> Click for More Information </a></div>
+            <div class = "learn-more"><a href="#Portfolio"> Click for More Information </a></div>
             <div id="Portfolio" class="modal">
                 <div class="content">
                     <h2 style="text-align: center;">
