--- a/index.html
+++ b/index.html
@@ -3408,7 +3408,7 @@
                 <p class="skill-text" style="text-align: left;"> PyTorch, Kaggle,
                     Cloud-instance, Google Search API </p>
             </div>
-            <div class = "learn-more link-orange"><a href="#Chatbot"> Click for More Information </a></div>
+            <div class = "learn-more"><a href="#Chatbot" class="link-orange"> Click for More Information </a></div>
             <div id="Chatbot" class="modal">
                 <div class="content">
                     <h2 style="text-align: center;">
@@ -3438,7 +3438,7 @@
                 <p class="skill-text" style="text-align: left;"> Electrical Circuits,
                     Python, Programming </p>
             </div>
-            <div class = "learn-more link-orange"><a href="#Knee"> Click for More Information </a></div>
+            <div class = "learn-more"><a href="#Knee" class="link-orange"> Click for More Information </a></div>
             <div id="Knee" class="modal">
                 <div class="content">
                     <h2 style="text-align: center;">
@@ -3465,7 +3465,7 @@
                 </p>
                 <p class="skill-text link-orange" style="text-align: left;"> HTML/CSS, Open AI, Web-Development </p>
             </div>
-            <roles><a href="#Politics"> Click for More Information </a></roles>
+            <div class = "learn-more"><a href="#Politics" class="link-orange"> Click for More Information </a></roles>
             <div id="Politics" class="modal">
                 <div class="content">
                     <h2 style="text-align: center;">
@@ -3495,7 +3495,7 @@
                 <p class="project-text" style="color: #FB8500; text-align: left;"> SKILLS:</p>
                 <p class="skill-text" style="text-align: left;"> OpenCV, PyTorch, HTML/CSS/JS </p>
             </div>
-            <div class = "learn-more link-orange"><a href="#Handwriting"> Click for More Information </a></div>
+            <div class = "learn-more"><a href="#Handwriting" class=link-orange"> Click for More Information </a></div>
             <div id="Handwriting" class="modal">
                 <div class="content">
                     <h2 style="text-align: center;">
@@ -3522,7 +3522,7 @@
                 <p class="skill-text" style="text-align: left;"> GreenFootAPI, Java, Object-Oriented
                     Programming </p>
             </div>
-            <div class = "learn-more link-orange"><a href="#Game"> Click for More Information </a></div>
+            <div class = "learn-more"><a href="#Game" class=link-orange"> Click for More Information </a></div>
             <div id="Game" class="modal">
                 <div class="content">
                     <h2 style="text-align: center;">
@@ -3552,7 +3552,7 @@
                 </p>
                 <p class=" skill-text" style="text-align: left;"> HTML, CSS, JavaScript </p>
             </div>
-            <div class = "learn-more link-orange"><a href="#Portfolio"> Click for More Information </a></div>
+            <div class = "learn-more"><a href="#Portfolio" class=link-orange"> Click for More Information </a></div>
             <div id="Portfolio" class="modal">
                 <div class="content">
                     <h2 style="text-align: center;">
