--- a/index.html
+++ b/index.html
@@ -3484,6 +3484,7 @@
             </div>
         </div>
     </div>
+    </div>
     <br>
     <div class="flex-container proj-box-cont add_margin">
         <div class="project-box">
