--- a/index.html
+++ b/index.html
@@ -3312,7 +3312,7 @@
                 position: absolute;
                 top: 0;
                 right: 15px;
-                color: #fe0606;
+                color: #FFB703;
                 text-decoration: none;
                 font-size: 30px;
             }
@@ -3421,7 +3421,7 @@
                         responses
                         to mental health questions and respective links to resources. </p>
                     <br>
-                    <a href="#Projects" class="popbox-close">
+                    <a href="#Projects" class="box-close">
                         X
                     </a>
                 </div>
@@ -3449,7 +3449,7 @@
                         technology in order to help with knee rehabilitation, especially with ACL tears. </p>
                     </p>
                     <br>
-                    <a href="#Projects" class="popbox-close">
+                    <a href="#Projects" class="box-close">
                         X
                     </a>
                 </div>
@@ -3477,7 +3477,7 @@
                         on ongoing elections, and providing access to candidate websites. </p>
                     </p>
                     <br>
-                    <a href="#Projects" class="popbox-close">
+                    <a href="#Projects" class="box-close">
                         X
                     </a>
                 </div>
@@ -3509,7 +3509,7 @@
                     file.
                     </p>
                     <br>
-                    <a href="#Projects" class="popbox-close">
+                    <a href="#Projects" class="box-close">
                         X
                     </a>
                 </div>
@@ -3536,7 +3536,7 @@
                     object-oriented programming and inheritance. </p>
                     </div>
                     <br>
-                    <a href="#Projects" class="popbox-close">
+                    <a href="#Projects" class="box-close">
                         X
                     </a>
                 </div>
@@ -3565,7 +3565,7 @@
                     bio, education, projects, honors, and contact information. </p>
                     </div>
                     <br>
-                    <a href="#Projects" class="popbox-close">
+                    <a href="#Projects" class="box-close">
                         X
                     </a>
                 </div>
